# tt-online

./: LICENSE  README.md
TT_Backend/: .gitignore  Cargo.toml
TT_Backend/res/cert/: cert.pem  key.pem
TT_Backend/src/: main.rs  server.rs
TT_Backend/src/server/: messages.rs  networking.rs
TT_HostApp/: pom.xml
TT_HostApp/src/: Main.java
TT_HostApp/src/Resources/: StringLiterals.properties  StringLiterals_de.properties  StringLiterals_en.properties
TT_HostApp/src/controller/: MainController.java
TT_HostApp/src/controller/activities/: ActivityControllerFactory.java  FastReadController.java
TT_HostApp/src/gui/: ActivitySelection.form  ActivitySelection.java  MainFrame.form  MainFrame.java
TT_HostApp/src/gui/activities/: FastReadPanel.form  FastReadPanel.java
TT_HostApp/src/main/java/: Main.java
TT_HostApp/src/main/java/controller/: MainController.java
TT_HostApp/src/main/java/controller/activities/: ActivityController.java  ActivityControllerFactory.java  ControllerCallbacks.java  FastReadController.java
TT_HostApp/src/main/java/gui/: ActivitySelection.form  ActivitySelection.java  MainFrame.form  MainFrame.java
TT_HostApp/src/main/java/transport/: ConnectionLayer.java  MessageLayer.java
TT_HostApp/src/main/resources/: StringLiterals.properties  StringLiterals_de.properties  StringLiterals_en.properties
TT_HostApp/src/resources/: StringLiterals.properties  StringLiterals_de.properties  StringLiterals_en.properties
TT_HostApp/src/transport/: Connection.java
tt-web-app/: package-lock.json  package.json
tt-web-app/src/: App.js
(+4 files in other folders)
