[package]
name = "tt_online"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
log = "0.4"
env_logger = "0.8"
serde_json = "1.0"

#warp = "0.3"
#futures = { version = "0.3", default-features = false }
#uuid = { version = "1", features = ["serde", "v4"] }
