[package]
name = "tt_online"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
tokio-tungstenite = {version = "0.17", features = ["native-tls"]}
futures-util = "0.3"
log = "0.4"
env_logger = "0.8"
serde_json = "1.0"

[features]
insecure_ws = []
